--- a/app/vue-app/.gitignore
+++ b/app/vue-app/.gitignore
@@ -1,5 +1,14 @@
-.idea/
-.vscode/
-public/
+.DS_Store
 node_modules/
-npm-debug.log
+dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
