--- a/app/vue-app/package.json
+++ b/app/vue-app/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "googleapis": "^22.2.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
